@@ -1,6 +1,6 @@
 package Whelk::Schema::Definition::_Scalar;
 
-use Kelp::Base 'Whelk::Schema::Definition';
+use Whelk::StrictBase 'Whelk::Schema::Definition';
 
 attr required => sub { !defined $_[0]->default };
 attr default => undef;
